@@ -19,4 +19,5 @@ pgen-0.01----------------------------------------------------------------------
 	-> Server identifier option added
 	-> Option Request Option added
 	-> Preference Option added
+	-> Elapsed Time Option added
 pgen-0.02----------------------------------------------------------------------
